--- a/html/type-object.html
+++ b/html/type-object.html
@@ -138,7 +138,7 @@ health that is appropriate for that breed.</p>
 <span class="p">{</span>
 <span class="nl">public:</span>
   <span class="n">Troll</span><span class="p">()</span> <span class="o">:</span> <span class="n">Monster</span><span class="p">(</span><span class="mi">48</span><span class="p">)</span> <span class="p">{}</span>
-  <span class="k">const</span> <span class="kt">char</span><span class="o">*</span> <span class="n">getAttack</span><span class="p">()</span> <span class="p">{</span>
+  <span class="k">virtual</span> <span class="k">const</span> <span class="kt">char</span><span class="o">*</span> <span class="n">getAttack</span><span class="p">()</span> <span class="p">{</span>
     <span class="k">return</span> <span class="s">&quot;The troll clubs you!&quot;</span><span class="p">;</span>
   <span class="p">}</span>
 <span class="p">};</span>
