--- a/html/prototype.html
+++ b/html/prototype.html
@@ -96,7 +96,7 @@
 <span class="k">class</span> <span class="nc">GhostSpawner</span> <span class="o">:</span> <span class="k">public</span> <span class="n">Spawner</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
-  <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span>
+  <span class="k">virtual</span> <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span>
   <span class="p">{</span>
     <span class="k">return</span> <span class="k">new</span> <span class="n">Ghost</span><span class="p">();</span>
   <span class="p">}</span>
@@ -105,7 +105,7 @@
 <span class="k">class</span> <span class="nc">DemonSpawner</span> <span class="o">:</span> <span class="k">public</span> <span class="n">Spawner</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
-  <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span>
+  <span class="k">virtual</span> <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span>
   <span class="p">{</span>
     <span class="k">return</span> <span class="k">new</span> <span class="n">Demon</span><span class="p">();</span>
   <span class="p">}</span>
@@ -137,7 +137,7 @@
     <span class="n">speed_</span><span class="p">(</span><span class="n">speed</span><span class="p">)</span>
   <span class="p">{}</span>
 
-  <span class="n">Monster</span><span class="o">*</span> <span class="n">clone</span><span class="p">()</span>
+  <span class="k">virtual</span> <span class="n">Monster</span><span class="o">*</span> <span class="n">clone</span><span class="p">()</span>
   <span class="p">{</span>
     <span class="k">return</span> <span class="k">new</span> <span class="n">Ghost</span><span class="p">(</span><span class="n">health_</span><span class="p">,</span> <span class="n">speed_</span><span class="p">);</span>
   <span class="p">}</span>
@@ -221,7 +221,7 @@
 <span class="k">class</span> <span class="nc">SpawnerFor</span> <span class="o">:</span> <span class="k">public</span> <span class="n">Spawner</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
-  <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span> <span class="p">{</span> <span class="k">return</span> <span class="k">new</span> <span class="n">T</span><span class="p">();</span> <span class="p">}</span>
+  <span class="k">virtual</span> <span class="n">Monster</span><span class="o">*</span> <span class="n">spawnMonster</span><span class="p">()</span> <span class="p">{</span> <span class="k">return</span> <span class="k">new</span> <span class="n">T</span><span class="p">();</span> <span class="p">}</span>
 <span class="p">};</span>
 </pre></div>
 
