New sans-serif font and restyles asides.

--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,10 @@
 <!-- Tell mobile browsers we're optimized for them and they don't need to crop the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div class="page">
 <div class="content">
 <h1>Game Programming Patterns</h1>
 
@@ -51,8 +52,8 @@
 </div>
 
 <p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text (that I've written so far) is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
-<p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I get. If you want to read more of my writing on other subjects, check out <a href="http://journal.stuffwithstuff.com/">my blog</a>.</p>
-<h2>Table of Contents</h2>
+<p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. If you want to read more of my writing on other subjects, check out <a href="http://journal.stuffwithstuff.com/">my blog</a> or <a href="https://twitter.com/munificentbob">follow me on twitter</a>.</p>
+<h2>Chapters</h2>
 <ul>
   <li><a href="introduction.html">Introduction</a>
     <ul>
@@ -99,8 +100,9 @@
     </ul>
   </li>
 </ul>
-<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
+</div>
+<p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
