--- a/html/architecture-performance-games.html
+++ b/html/architecture-performance-games.html
@@ -9,7 +9,7 @@
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,6 +21,7 @@
 </script>
 </head>
 <body id="top">
+<div class="page">
 <div class="content">
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -62,6 +63,7 @@
 <h1>Architecture, Performance, and Games</h1>
 <h1 class="book"><a href="index.html">Game Programming Patterns</a> / <a href="introduction.html">Introduction</a></h1>
 <p><em>Sorry, this chapter hasn&#x2019;t been written yet!</em></p>
+</div>
 </div>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </body>
