--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -9,7 +9,7 @@
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,6 +21,7 @@
 </script>
 </head>
 <body id="top">
+<div class="page">
 <div class="content">
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -481,6 +482,7 @@ I&#x2019;ll refrain.</p>
 <p>Physics engines track which objects are in motion and which are resting. Since a resting body won&#x2019;t move until an impulse is applied to it, they don&#x2019;t need processing until they get touched. This "is moving" bit is a dirty flag to note which objects have had forces applied and need to have their physics resolved.</p>
 </li>
 </ul>
+</div>
 </div>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </body>
