--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -9,7 +9,7 @@
      the viewport. -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <link rel="stylesheet" type="text/css" href="style.css" />
-<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:200,400,600,400italic,600italic" rel="stylesheet" type="text/css">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,6 +21,7 @@
 </script>
 </head>
 <body id="top">
+<div class="page">
 <div class="content">
 <div class="in-progress">
   <span class="dismiss">&times;</span>
@@ -735,6 +736,7 @@ context of an Object Pool means reclaiming the <em>memory</em> for an object
 <em>after</em> the original owner is done with it. With an Object Pool, there
 isn&#x2019;t any expectation that an object will be shared within its
 lifetime.</p>
+</div>
 </div>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </body>
