More work on second draft of Event Queue.

--- a/html/singleton.html
+++ b/html/singleton.html
@@ -632,7 +632,7 @@ to see <code>Log</code> show up in its argument list, so for cases like that we&
 
 <p>The term for things like logging that appear scattered throughout a codebase
 is a "cross-cutting concern". Handling cross-cutting concerns gracefully is a continuing architectural challenge, especially in statically typed languages.</p>
-<p>"Aspect-oriented programming" was designed to address just
+<p><a href="http://en.wikipedia.org/wiki/Aspect-oriented_programming">Aspect-oriented programming</a> was designed to address
 these concerns.</p>
 </aside>
 
